# simple-snake-game

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: raylib.cmake  raylib_cpp.cmake
src/: common.cpp  common.hpp  main.cpp
src/game_objects/: food.cpp  food.hpp  snake.cpp  snake.hpp
